--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,20 @@
         }
     ],
     "require" : {
-        "php" : "^7.4 || ^8.1",
-        "squizlabs/php_codesniffer": "^3",
-        "slevomat/coding-standard": "^8",
-        "phpcompatibility/php-compatibility": "^9"
+        "php" : "^8.1"
     },
     "require-dev": {
+        "pds/skeleton": "^1",
+        "phan/phan": "^5",
+        "php-parallel-lint/php-parallel-lint": "^1",
+        "php-parallel-lint/php-console-highlighter": "^1",
+        "phpcompatibility/php-compatibility": "^9",
+        "phpmd/phpmd": "^2",
+        "phpstan/phpstan-strict-rules": "^1",
+        "phpstan/phpstan" : "^1",
+        "slevomat/coding-standard": "^8",
+        "squizlabs/php_codesniffer" : "^3",
+        "vimeo/psalm": "^4"
     },
     "config": {
         "allow-plugins": {
