--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "php-parallel-lint/php-console-highlighter": "^1",
         "phpcompatibility/php-compatibility": "^9",
         "phpmd/phpmd": "^2",
+        "phpstan/phpstan-phpunit": "^1",
         "phpstan/phpstan-strict-rules": "^1",
         "phpstan/phpstan" : "^1",
         "slevomat/coding-standard": "^8",
