--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "phpstan/phpstan-phpunit": "^1",
         "phpstan/phpstan-strict-rules": "^1",
         "phpstan/phpstan" : "^1",
+        "phpunit/phpunit": "^10",
         "slevomat/coding-standard": "^8",
         "squizlabs/php_codesniffer" : "^3",
         "vimeo/psalm": "^4"
