--- a/phpstan/phpstan.neon
+++ b/phpstan/phpstan.neon
@@ -1,5 +1,7 @@
 parameters:
     treatPhpDocTypesAsCertain: false
+    # level is needed here when using phpStorm (prevent error "No rules detected..")
+    level: max
 includes:
     - %currentWorkingDirectory%/vendor/phpstan/phpstan-phpunit/extension.neon
     - %currentWorkingDirectory%/vendor/phpstan/phpstan-phpunit/rules.neon
