--- a/phpstan/phpstan-symfony-doctrine.neon
+++ b/phpstan/phpstan-symfony-doctrine.neon
@@ -15,10 +15,17 @@ parameters:
             # (?) - file might not exist
             - *tests/bootstrap.php
 
+    doctrine:
+        literalString: true
+        objectManagerLoader: %currentWorkingDirectory%/.phpstan/get_doctrine_manager.php
+        reportDynamicQueryBuilders: true
+        reportUnknownTypes: true
     symfony:
         containerXmlPath: %currentWorkingDirectory%/var/cache/dev/App_KernelDevDebugContainer.xml
 
 includes:
+    - %currentWorkingDirectory%/vendor/phpstan/phpstan-doctrine/extension.neon
+    - %currentWorkingDirectory%/vendor/phpstan/phpstan-doctrine/rules.neon
     - %currentWorkingDirectory%/vendor/phpstan/phpstan-phpunit/extension.neon
     - %currentWorkingDirectory%/vendor/phpstan/phpstan-phpunit/rules.neon
     - %currentWorkingDirectory%/vendor/phpstan/phpstan-strict-rules/rules.neon
