--- a/composer.json
+++ b/composer.json
@@ -30,9 +30,11 @@
         "phpstan/phpstan": "^2",
         "phpstan/phpstan-symfony": "^2",
         "phpunit/phpunit": "^10",
+        "psalm/plugin-symfony": "^5",
         "slevomat/coding-standard": "^8",
         "squizlabs/php_codesniffer" : "^3",
-        "vimeo/psalm": "^4"
+        "vimeo/psalm": "^4",
+        "weirdan/doctrine-psalm-plugin": "^2"
     },
     "config": {
         "allow-plugins": {
