--- a/phpstan/phpstan-symfony-doctrine.neon
+++ b/phpstan/phpstan-symfony-doctrine.neon
@@ -24,6 +24,7 @@ parameters:
         containerXmlPath: %currentWorkingDirectory%/var/cache/dev/App_KernelDevDebugContainer.xml
 
 includes:
+    - %currentWorkingDirectory%/vendor/phpstan/phpstan-deprecation-rules/rules.neon
     - %currentWorkingDirectory%/vendor/phpstan/phpstan-doctrine/extension.neon
     - %currentWorkingDirectory%/vendor/phpstan/phpstan-doctrine/rules.neon
     - %currentWorkingDirectory%/vendor/phpstan/phpstan-phpunit/extension.neon
