--- a/phpstan/phpstan.neon
+++ b/phpstan/phpstan.neon
@@ -3,6 +3,7 @@ parameters:
     # level is needed here when using phpStorm (prevent error "No rules detected..")
     level: max
 includes:
+    - %currentWorkingDirectory%/vendor/phpstan/phpstan-deprecation-rules/rules.neon
     - %currentWorkingDirectory%/vendor/phpstan/phpstan-phpunit/extension.neon
     - %currentWorkingDirectory%/vendor/phpstan/phpstan-phpunit/rules.neon
     - %currentWorkingDirectory%/vendor/phpstan/phpstan-strict-rules/rules.neon
