--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require" : {
-        "php" : "^7.4||^8.1"
+        "php" : "^8.4"
     },
     "require-dev": {
         "pds/skeleton": "^1",
@@ -34,7 +34,7 @@
         "psalm/plugin-symfony": "^5",
         "slevomat/coding-standard": "^8",
         "squizlabs/php_codesniffer" : "^3",
-        "vimeo/psalm": "^4",
+        "vimeo/psalm": "^6",
         "weirdan/doctrine-psalm-plugin": "^2"
     },
     "config": {
